6730637	deadlocks in IMAP provider when connections fail
6738454	deadlock when connection is broken
6738468	javadocs use fully qualified names
GF 3929	Inconsistent synchronization in com.sun.mail.iap.Protocol
GF 4997	BASE64DecoderStream.skip (etc) skips the wrong number of octets
GF 5189	Can't specify SSLSocketFactory for STARTTLS in Javamail 1.4
<no id>	ignore socket timeout while waiting in IMAP IDLE
<no id>	fix bug in MailDateFormat parsing in non-lenient mode
<no id>	add mail.mime.multipart.allowempty system property to handle (illegal)
	empty multiparts (see javax.mail.internet.MimeMultipart)
<no id>	add mail.mime.multipart.ignoreexistingboundaryparameter system property
	to allow parsing multiparts with incorrect boundary parameters
<no id>	handle address of the form "Undisclosed-Recipients:;"
<no id>	add com.sun.mail.util.DecodingException to distinguish decoding errors
<no id>	add mail.mime.ignoreunknownencoding system property (see MimeUtility)
<no id>	ignore errors from SMTP RSET command
<no id>	InternetAddress - detect more errors when strict, accept more when not
<no id>	add mail.<protocol>.socketFactory and .ssl.socketFactory properties
<no id>	add mail.<protocol>.ssl.enable property
<no id>	add mail.mime.parameters.strict property to control ParameterList parse
<no id>	fix possible NPE in MimeMessage if flags is not set in copy constructor


		  CHANGES IN THE 1.4.1 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.1 release.

4107594	IMAP implementation should use the IDLE extension if available
4119871	MimeMessage.reply() should set the "References" header
6228377	IMAPFolder's setFlags method handles user flags incorrectly
6423701	Problem with using OrTerm when the protocol is IMAP
6431207	SMTP is adding extra CRLF to message content
6447295	IMAPMessage fails to return Content-Language from bodystructure
6447799	encoded text not decoded even when mail.mime.decodetext.strict is false